    - add d/p/test-integration/xpcshell-output-valid-junit-xml.patch
    - update debian/patches/series.in
  * Add JUnit output support for mochitests
    - add d/p/test-integration/mochitest-output-junit-xml.patch
    - update debian/patches/series.in
    - update debian/testing/run_mochitest.in
  * Drop debian/patches/python-virtualenv-multiarch-fix.patch - fixed upstream

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 08 Jan 2013 00:43:23 +0000

firefox-trunk (20.0~a1~hg20130107r117821-0ubuntu1) raring; urgency=low

  * New upstream snapshot v20.0 A1 HG20130107R117821

  * Update globalmenu-extension to r3.7
    - update for imagelib changes in Firefox 20
    - implement the mutation observer in JS, as it's no longer possible
      to do it all in native code
  * Refresh patches
    - update debian/patches/mozilla-kde.patch
  * firefox-gnome-support needs explicit dependency on libnotify
    - update debian/control{,.in}
  * Add support for autopkgtest, package the xpcshell, reftest and
    mochitest testsuites and migrate the xpcshell-tests, reftest, crashtest,
    jstestbrowser and mochitest targets to this. Note that tests that can't
    be ran as an autopkgtest (eg, if they require write permissions to the
    application directory) will still be ran at build time
    - add firefox-testsuite package in debian/control.in
    - update debian/control
    - add debian/firefox-testsuite.install.in
    - add debian/firefox-testsuite.links.in
    - update debian/build/mozbuild.mk
    - update debian/rules
    - drop xpcshell-tests, reftest, crashtest, jstestbrowser and mochitest
      targets from debian/build/testsuite.mk, add xpcshell-tests-build
      and the ability to run xpcshell-tests with our own reduced manifest
    - add debian/tests/control
    - add debian/tests/crashtest
    - add debian/tests/jstestbrowser
    - add debian/tests/mochitest
    - add debian/tests/reftest
    - add debian/tests/xpcshell-tests