@@ -55,7 +55,7 @@ ac_add_options --enable-debug
 ac_add_options --disable-debug
 %%endif
 ac_add_options --disable-elf-hack
-ac_add_options --enable-extensions=default,globalmenu
+#ac_add_options --enable-extensions=default,globalmenu
 %%if MOZ_APP_BASENAME != MOZ_DEFAULT_APP_BASENAME
 ac_add_options --with-app-basename=@MOZ_APP_BASENAME@
 %%else
