@@ -1,1 +1,1 @@
-@MOZ_ADDONDIR@/extensions/globalmenu@ubuntu.com @MOZ_LIBDIR@/webapprt/extensions/globalmenu@ubuntu.com
+#@MOZ_ADDONDIR@/extensions/globalmenu@ubuntu.com @MOZ_LIBDIR@/webapprt/extensions/globalmenu@ubuntu.com
